fix: allow creator name visible

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -730,23 +730,26 @@ select {
 .mt-6 {
   margin-top: 1.5rem;
 }
+.mb-4 {
+  margin-bottom: 1rem;
+}
 .mt-1 {
   margin-top: 0.25rem;
-}
-.ml-10 {
-  margin-left: 2.5rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+.ml-5 {
+  margin-left: 1.25rem;
+}
 .mt-5 {
   margin-top: 1.25rem;
 }
+.ml-10 {
+  margin-left: 2.5rem;
+}
 .mb-1 {
   margin-bottom: 0.25rem;
-}
-.mb-4 {
-  margin-bottom: 1rem;
 }
 .block {
   display: block;
@@ -872,6 +875,9 @@ select {
 .items-center {
   align-items: center;
 }
+.justify-start {
+  justify-content: flex-start;
+}
 .justify-end {
   justify-content: flex-end;
 }
@@ -987,6 +993,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1007,6 +1017,12 @@ select {
 }
 .p-2 {
   padding: 0.5rem;
+}
+.p-10 {
+  padding: 2.5rem;
+}
+.p-2\.5 {
+  padding: 0.625rem;
 }
 .p-5 {
   padding: 1.25rem;
@@ -1594,6 +1610,10 @@ select {
   }
 }
 @media (min-width: 768px) {
+
+  .md\:w-1\/2 {
+    width: 50%;
+  }
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
